Fix title alignments

--- a/style.scss
+++ b/style.scss
@@ -303,6 +303,10 @@ nav {
   }
 
   text-align: justify;
+  
+  h1 {
+    text-align: left;
+  }
 }
 
 .wrapper-footer {
